# PAI_2025_LEI_ZHANG_superLOLassistant

./: Fiche_Projet_ZHANG_LEI.docx  README.md  Soutenance_SuperLOL_Presentation.pptx  data_base_riot.py  ingame_tab.py  interface.py  lol_matchups_test.py  main_qt.py  pyproject.toml  requirements.txt  riot_dump_one_match.py  trashbase.py  ~$emple de fiche projet PAI.docx  新建文本文档.txt
.github/workflows/: CI.yaml
data/: champion_id_to_name.json  champion_tags.json  matches_raw.jsonl  matchups.csv
data_db/: matches.csv  participants.csv
data_dbase/: participants.csv
data_one_match/: match_EUW1_7525935305.json  match_EUW1_7557644837.json  objectives_EUW1_7525935305.csv  objectives_EUW1_7557644837.csv  participants_EUW1_7525935305.csv  participants_EUW1_7557644837.csv  teams_EUW1_7525935305.csv  teams_EUW1_7557644837.csv  timeline_EUW1_7525935305.json  timeline_EUW1_7557644837.json  timeline_events_EUW1_7525935305.csv  timeline_events_EUW1_7557644837.csv
data_user/: participants_CurlingCaptain_EUW.csv  participants_Lukezy_EUW.csv  participants_TTVbigcheektimmy_EUW.csv  participants_getogetogeto_EUW.csv  participants_haooo.csv  participants_lHvMjSHogan.csv  participants_ztheo17.csv  participants_ztheo17_EUW.csv  participants_鹅会出手_002.csv
source/: conf.py
tests/: test_ingame_tab.py  test_interface.py  test_matchups.py
